2012-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am: Clarify *tex_version.h dependencies.

2012-07-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am: Distribute xetex_version.h.
	* xetexextra.h: Use ../etexdir/etex_version.h.

2012-06-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetex.ch: XeTeX uses 256 math font families.

2012-05-07  Khaled Hosny  <khaledhosny@eglug.org>

	* am/xetex.am (xetex_web_srcs): Drop enctex.ch.
	* xetex.ch, xetex-latex3.ch: Adjusted.

2012-05-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am (EXTRA_DIST): Drop pool2c.pl (is removed).

2012-05-05  Khaled Hosny  <khaledhosny@eglug.org>

	* xetex.ch, xetex.defines, XeTeX_ext.h, am/xetex.am: Use makecpool
	instead of out pool2c.pl.
	* pool2c.pl: Removed.

2012-04-24  Khaled Hosny  <khaledhosny@eglug.org>

	* xetex.ch: Merge changes from XeTeX repository.

2012-04-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xetex-hz.ch: Added copyright statement.
	Removed useless blank lines at end of change sets.

2012-04-18  Khaled Hosny  <khaledhosny@eglug.org>

	* xetex-hz.ch, xetex.ch: Merge changes from XeTeX repository.

2012-03-25  Khaled Hosny  <khaledhosny@eglug.org>

	* XeTeX_ext.h, xetex.ch: Merge changes from XeTeX repository.

2012-03-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeX_ext.c, xetex.h (Byte): Remove temporary #define to my_Byte
	and subsequent #undef.  The typedef conflict between TECkit_Common.h
	and zlib is now handled differently (by zlib and TECkit).

2012-03-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeXGrLayout.h: Declare XeTeXGrTextSource::featureVariations()
	required for graphite-2.4.

2012-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xetex.ch: Remove test for end-of-file after undump.
	* xetex.defines: Remove weof().

2012-02-11  Jonathan Kew  <jfkthame@gmail.com>

	* XeTeX_ext.c (makefontdef): pass font pathname to xdvipdfmx
	  whenever possible, to avoid fontconfig search mismatches
