@@ -1,3 +1,10 @@
+2012-08-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* XeTeXFontMgr.cpp: Add 'extern "C" {' to avoid link error in MSVC.
+	* XeTeX_ext.c: Change order of inlusion of headers to be able to
+	compile by using MSVC.
+	* XeTeX_ext.h: Add 'extern "C" {' to avoid link error in MSVC.
+
 2012-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* am/xetex.am: Clarify *tex_version.h dependencies.
